kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobilebank-api
  namespace: mobilebank
  labels:
    app: mobilebank-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: mobilebank-api
