kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilebank-api
  namespace: mobilebank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    # cert-manager (Week 5 - Day 23)
    cert-manager.io/cluster-issuer: "mobilebank-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mobilebank.local
      secretName: mobilebank-tls
  rules:
    - host: mobilebank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilebank-api
                port:
                  number: 80
